Added ny udgave af he side med tabs

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ sportmonda.dk/dist
 .vs/slnx.sqlite
 .vs/DaisyRaNoget/config/applicationhost.config
 .vs/DaisyRaNoget/v16/.suo
+.vs/VSWorkspaceState.json
